Fix visible button in collection-item component while his image is not loaded

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -26,6 +26,7 @@
   &:focus {
     .collection-item__cart-btn {
       z-index: 1;
+      opacity: 1;
     }
   }
 
@@ -49,11 +50,13 @@
     opacity: 0.85;
     bottom: 20px;
     z-index: -1;
+    opacity: 0;
     width: 80%;
     left: 10%;
 
     &:focus {
       z-index: 1;
+      opacity: 1;
     }
   }
 
